--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tic-Tac-Toe Game</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="start-page">
+        <h1>Tic-Tac-Toe Game</h1>
+        <button id="start-btn">Start Game</button>
+    </div>
+    <div id="select-player" class="hidden">
+        <h2>Choose x or o</h2>
+        <button id="player-x">X</button>
+        <button id="player-o">O</button>
+    </div>
+    <div id="game-container" class="hidden">
+        <div id="board">
+            <div class="row">
+                <div class="cell" data-cell></div>
+                <div class="cell" data-cell></div>
+                <div class="cell" data-cell></div>
+            </div>
+            <div class="row">
+                <div class="cell" data-cell></div>
+                <div class="cell" data-cell></div>
+                <div class="cell" data-cell></div>
+            </div>
+            <div class="row">
+                <div class="cell" data-cell></div>
+                <div class="cell" data-cell></div>
+                <div class="cell" data-cell></div>
+            </div>
+        </div>
+        <h3 id="turn"></h3>
+        <button id="reset">Restart Game</button>
+        <div id="result" class="hidden"></div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
